Removed background image. Insert cropped top-image. Navbarfat bug fixed. Vertical-centered navbar content.

--- a/assets/stylesheets/app/app.css
+++ b/assets/stylesheets/app/app.css
@@ -426,6 +426,10 @@ Media queries
   #wrap {
     padding-top: 0;
   }
+  .navbar-fixed-top {
+    margin-bottom: 0px;
+  }
+
 }
  
 /* Portrait tablet to landscape and desktop */
@@ -574,9 +578,12 @@ Media queries
 
 /* Makes navbar fatter */
 .navbarfat {
-  height: 70px;  
+  min-height: 70px;  
 }
 
+.navbar-vertical-center {
+  margin-top: 15px;
+}
 
 .content {
   width: 100%;
@@ -600,3 +607,7 @@ li {
   text-align: left;
 }
 
+.landingpage-image {
+  width: 100%;
+  height: 500px;
+}
